--- a/WebContent/jsfDocs/modulos/index.xhtml
+++ b/WebContent/jsfDocs/modulos/index.xhtml
@@ -1,9 +1,20 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html>
+<ui:composition template="/WEB-INF/plantillas/plantilla.xhtml" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html">
+      xmlns:b="http://bootsfaces.net/ui"
+      xmlns:ui="http://java.sun.com/jsf/facelets">
+            <ui:define name="content">
 
-	<ui:composition template="">
-	</ui:composition>
-</html>
+                <h1>Examples</h1>
+                <hr/>
+                <p>These BootsFaces examples are ports of Bootstrap 3 examples.</p>
+                <p>They are built using JSF and BootsFaces's components, to show the framework in action and how it can be used to build your pages.</p>
+                <p>You can get them as a point of start for developing your projects.</p>
+                
+                <h1>Demo Applications</h1>
+                <p>Coming Back soon.</p>
+                
+            </ui:define>
+        </ui:composition>
