--- a/WebContent/jsfDocs/modulos/mantenimiento/regions.xhtml
+++ b/WebContent/jsfDocs/modulos/mantenimiento/regions.xhtml
@@ -4,6 +4,6 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html">
 
-	<ui:composition template="">
+	<ui:composition template="/WEB-INF/plantillas/plantilla.xhtml">
 	</ui:composition>
 </html>
